--- a/masterproef.tex
+++ b/masterproef.tex
@@ -1,4 +1,4 @@
-\documentclass[master=cws, twoside]{kulemt}
+\documentclass[master=cws, oneside]{kulemt}
 \setup{title={Programmeren en Bewijzen met Dependently Typed Talen},
   author={Toon Nolten},
   promotor={Dr.\ Dominique Devriese \and Prof.\,dr.\,ir.\ Frank Piessens},
